util/diff_html.py: Fixed whitespace in generated diff view table so white-space: pre can be used (and whitespace in diffs preserved).

--- a/MoinMoin/web/static/htdocs/classic/css/screen.css
+++ b/MoinMoin/web/static/htdocs/classic/css/screen.css
@@ -399,14 +399,20 @@ form.dialog {
 
 .diff-added {
 	background-color: #E0FFE0;
-	vertical-align: sub;
+	vertical-align: top;
 	width: 50%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    font-family: courier, monospace;
 }
 
 .diff-removed {
 	background-color: #FFFFE0;
-	vertical-align: sub;
+	vertical-align: top;
 	width: 50%;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    font-family: courier, monospace;
 }
 
 .diff-added span {
